--- a/WebApplication1/web/index.xhtml
+++ b/WebApplication1/web/index.xhtml
@@ -6,6 +6,7 @@
         <title>Facelet Title</title>
     </h:head>
     <h:body>
+        TESSST
         Hello from Facelets
         <br />
         <h:link outcome="welcomePrimefaces" value="Primefaces welcome page" />
